--- a/charts/partners/demo-partner/wordpress/10.11.2/report.yaml
+++ b/charts/partners/demo-partner/wordpress/10.11.2/report.yaml
@@ -6,37 +6,37 @@ Chart:
   version: 5.7.1
 ok: false
 
-contains-test:
-	ok: true
-	reason: Chart test files exist
-images-are-certified:
-	ok: false
-	reason: Image is Red Hat certified : docker.io/bitnami/mariadb:10.5.9-debian-10-r56 
-		Image is Red Hat certified : docker.io/bitnami/wordpress:5.7.1-debian-10-r19 
-chart-testing:
-	ok: true
-	reason: Chart tests have passed
-is-helm-v3:
-	ok: true
-	reason: API version is V2, used in Helm 3
-has-minkubeversion:
-	ok: false
-	reason: Minimum Kubernetes version is not specified
-not-contains-crds:
-	ok: true
-	reason: Chart does not contain CRDs
-helm-lint:
-	ok: true
-	reason: Helm lint successful
-not-contain-csi-objects:
-	ok: true
-	reason: CSI objects do not exist
 has-readme:
 	ok: true
 	reason: Chart has a README
 contains-values:
 	ok: true
 	reason: Values file exist
+has-minkubeversion:
+	ok: false
+	reason: Minimum Kubernetes version is not specified
+is-helm-v3:
+	ok: true
+	reason: API version is V2, used in Helm 3
+not-contains-crds:
+	ok: true
+	reason: Chart does not contain CRDs
+contains-test:
+	ok: true
+	reason: Chart test files exist
 contains-values-schema:
 	ok: true
 	reason: Values schema file exist
+helm-lint:
+	ok: true
+	reason: Helm lint successful
+not-contain-csi-objects:
+	ok: true
+	reason: CSI objects do not exist
+images-are-certified:
+	ok: false
+	reason: Image is Red Hat certified : docker.io/bitnami/wordpress:5.7.1-debian-10-r19 
+		Image is Red Hat certified : docker.io/bitnami/mariadb:10.5.9-debian-10-r56 
+chart-testing:
+	ok: true
+	reason: Chart tests have passed
